syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/contactsystem";

import "audit.proto";

message ContactSystem {
    string contact_system_code = 1;

    string description = 2;

    string details = 3;

    string status = 4;

    v1.Audit audit = 5;
}

message DoReadContactSystemRequest {
    string contact_system_code = 1;
}

message DoReadContactSystemResponse {
    ContactSystem contact_system = 1;
}

message DoReadAllContactSystemRequest { }

message DoReadAllContactSystemResponse {
    repeated ContactSystem contact_systems = 1;
}

message DoSaveContactSystemRequest { 
    ContactSystem contact_system = 1;
}

message DoSaveContactSystemResponse {
    bool result = 1;
}

message DoDeleteContactSystemRequest {
    string contact_system_code = 1;
}

message DoDeleteContactSystemResponse {
    bool result = 1;
}

service ContactSystemService { 
    rpc DoRead (DoReadContactSystemRequest) returns (DoReadContactSystemResponse);

    rpc DoReadAll (DoReadAllContactSystemRequest) returns (DoReadAllContactSystemResponse);

    rpc DoSave (DoSaveContactSystemRequest) returns (DoSaveContactSystemResponse);

    rpc DoDelete (DoDeleteContactSystemRequest) returns (DoDeleteContactSystemResponse);
}